--- a/Spanish/main/MiuiKeyguard.apk/res/values-es/strings.xml
+++ b/Spanish/main/MiuiKeyguard.apk/res/values-es/strings.xml
@@ -19,7 +19,7 @@
     <string name="unlocking_sim_card">Desbloquear la tarjeta SIM</string>
     <string name="short_pukcode_error_msg">Debe ingresar al menos 8 dígitos.</string>
     <string name="short_pincode_error_msg">Por favor introduce 4-8 dígitos</string>
-    <string name="input_pin_code">Ingresa PIN</string>
+    <string name="input_pin_code">Inserta PIN</string>
     <string name="input_pin_code_to_unlock">Introduzca el código PIN para desbloquear el dispositivo</string>
     <string name="pincode_set_to_default_msg">Código PIN es 1234, puede cambiar aquí:</string>
     <string name="incorrect_pukcode_remaining_attempts">Código PUK incorrecta, intentos restante %d</string>
