--- a/Spanish/main/framework-miui-res.apk/res/values-es/strings.xml
+++ b/Spanish/main/framework-miui-res.apk/res/values-es/strings.xml
@@ -577,4 +577,5 @@ Inténtalo de nuevo en %d segundos."</string>
     <string name="kg_reordering_delete_drop_target_text">Eliminar</string>
 	
 	<string name="v5_date_time_picker_dialog_title">Hora de recordatorio</string>
+	<string name="reboot_confirm_title">El teléfono se reiniciará.</string>
 </resources>
