--- a/Spanish/main/framework-res.apk/res/values-es/strings.xml
+++ b/Spanish/main/framework-res.apk/res/values-es/strings.xml
@@ -758,7 +758,7 @@
   <string name="keyguard_password_wrong_pin_code">Código PIN incorrecto</string>
   <string name="keyguard_label_text">Para desbloquear el teléfono, pulsa la tecla de menú y, a continuación, pulsa 0.</string>
   <string name="emergency_call_dialog_number_for_display">Número de emergencia</string>
-  <string name="lockscreen_carrier_default">Sin servicio</string>
+  <string name="lockscreen_carrier_default">MIUI</string>
   <string name="lockscreen_screen_locked">Pantalla bloqueada</string>
   <string name="lockscreen_instructions_when_pattern_enabled">Pulsa la tecla de menú para desbloquear el teléfono o realizar una llamada de emergencia.</string>
   <string name="lockscreen_instructions_when_pattern_disabled">Pulsa la tecla de menú para desbloquear la pantalla.</string>
