--- a/Spanish/main/MiuiVideo.apk/res/values-es/strings.xml
+++ b/Spanish/main/MiuiVideo.apk/res/values-es/strings.xml
@@ -86,7 +86,7 @@
     <string name="loading_review_failed">No se puede cargar comentario</string>
     <string name="loading_review"><CDATA> Cargando </CDATA></string>
     <string name="searching"><CDATA> Buscando </CDATA></string>
-    <string name="recentplay">Recientemente jugado</string>
+    <string name="recentplay">Reproducido recientemente</string>
     <string name="clearplayhistory">Borrar el historial</string>
     <string name="no_playhistory">No hay historial</string>
     <string name="no_favoritehistory">No hay favoritos</string>
@@ -95,8 +95,8 @@
     <string name="ok">Aceptar</string>
     <string name="good">Aceptar</string>
     <string name="sure">Estoy de acuerdo</string>
-    <string name="declaration_content">Al tocar \"Acepto\", usted acepta los Términos de Uso esbozados por Sohu vídeo, iQiyi, y otros proveedores de contenido de vídeo.</string>
-    <string name="declaration_content_short">Al tocar \"Acepto\", usted acepta los Términos de Uso esbozados por Sohu vídeo, iQiyi, y otros proveedores de contenido de vídeo.</string>
+    <string name="declaration_content">Al pulsar \"Acepto\", acepta los Términos de Uso escritos por Sohu vídeo, iQiyi, y otros proveedores de contenido de vídeo.</string>
+    <string name="declaration_content_short">Al pulsar \"Acepto\", acepta los Términos de Uso escritos por Sohu vídeo, iQiyi, y otros proveedores de contenido de vídeo.</string>
     <string name="ok_no_more">No mostrar de nuevo</string>
     <string name="today">Hoy</string>
     <string name="yestorday">Ayer</string>
@@ -119,7 +119,7 @@
     <string name="success_to_cancel_myfavorite">Cancelado</string>
     <string name="count_myfavorite"> protagonizado</string>
     <string name="myfavorite">Destacado</string>
-    <string name="no_myfavorite">No estrellado</string>
+    <string name="no_myfavorite">Sin especificar estrellas</string>
     <string name="no_myfavorite_advice">Recomendado</string>
     <string name="myfavorite_onlylocal">Destacado</string>
     <string name="no_myfavorite_advice_onlylocal">Vídeos locales estrellas</string>
@@ -129,9 +129,9 @@
     <string name="mediaset">Saga</string>
     <string name="select_all">Seleccionar todo</string>
     <string name="cancel_select_all">Deselecciónar todo </string>
-    <string name="login_tip_title">Iniciar sesión en su cuenta de Mi</string>
-    <string name="login_tip_content">Inicia sesión con tu cuenta de Mi sincronizar y actualizar muestra que actualmente está siguiendo.</string>
-    <string name="nologin_no_waitfornewset">¡Tienes que entrar para seguir shows.</string>
+    <string name="login_tip_title">Iniciar sesión en su cuenta de Mi Account</string>
+    <string name="login_tip_content">Inicia sesión con tu cuenta de Mi para sincronizar y actualizar el contenido que actualmente está siguiendo.</string>
+    <string name="nologin_no_waitfornewset">Tienes que entrar para seguir los shows.</string>
     <string name="video">Vídeo</string>
     <string name="mycamera">Mis vídeos</string>
     <string name="mydlna">Recursos DLNA</string>
