--- a/Spanish/main/framework-miui-res.apk/res/values-es/strings.xml
+++ b/Spanish/main/framework-miui-res.apk/res/values-es/strings.xml
@@ -252,7 +252,7 @@
   <string name="country_name_za">ZA</string>
   <string name="country_name_zm">ZM</string>
   <string name="country_name_zw">ZW</string>
-  <string name="day_of_month"> %d</string>
+  <string name="day_of_month">" %d"</string>
   <string name="delete">Eliminar</string>
   <string name="double_seventh_day">七夕</string>
   <string name="error_forbidden">Su cuenta tiene problemas. Sincronización deshabilitada.</string>
@@ -279,7 +279,6 @@ Enable via Settings &gt; System &gt; Button Settings"</string>
   <string name="fm_record_smaple_prefix_miui">GrabaciónFM</string>
   <string name="fools_day">愚人节</string>
   <string name="force_exit_message">Cerrada \"%1$s\",</string>
-  <string name="format_time_in_12_hours">%1$s %2$s</string>
   <string name="global_action_privacy_mode_dialog_message">En el modo protegido las llamadas, notas, galería y mensajes de texto se ocultarán y el launcher no será capaz de entrar en modo de edición. Puede establecer una contraseña para proteger el modo de guardado en la configuración de control de acceso</string>
   <string name="global_action_toggle_privacy_mode">Protegido</string>
   <string name="grain_buds">小满</string>
